# mdpath

./: .codecov.yml  .gitattributes  .lgtm.yml  CODE_OF_CONDUCT.md  Cluster visu.ipynb  LICENSE  README.md  cluster_pathways_dict.pkl  clusters_paths.json  mi_diff_df.csv  output.txt  precomputed_clusters_paths.json  pyproject.toml  quick_precomputed_clusters_paths.json  readthedocs.yml  residue_coordinates.pkl  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml  CI_CD.yml  Linux_CI_CD.yml  MacOS_CI_CD.yml  Windows_CI_CD.yml  publish.yml
devtools/: README.md
docs/: Makefile  README.md  api.rst  conf.py  developer_guide.rst  faq.rst  getting_started.rst  index.rst  installation.rst  make.bat  mdpath_api.rst  mdpath_classes.rst  mdpath_functions.rst  mdpath_outputs.rst  mdpath_visualization.rst  readthedocs_templates.txt  requirements.txt  requirements.yaml  running_mdpath.rst  running_mdpath_tools.rst  user_guide.rst
docs/mdpath_classes/: bootstrap.rst  cluster.rst  graph.rst  mdpath.rst  mdpath_tools.rst  mutual_information.rst  notebook_vis.rst  structure.rst  visualization.rst
mdpath/: Cluster vis.ipynb  Pathway vis.ipynb  Untitled21.py  Visualisation demo.ipynb  __init__.py  example.txt  mdpath.py  mdpath_tools.py  vis_nglview.ipynb  vis_pymol.py
mdpath/src/: bootstrap.py  cluster.py  graph.py  mutual_information.py  notebook_vis.py  structure.py  visualization.py
mdpath/tests/: TODO.txt  cluster_data.pkl  cluster_pathways_dict_testpc.pkl  cluster_pathways_dict_tools.pkl  clusters.pkl  easy_read_colors.json  mi_diff_df.csv  quick_precomputed_clusters_paths.json  residue_coordinates.pkl  sorted_paths.pkl  test_bootstrap.py  test_cluster.py  test_graph.py  test_mdpath.py  test_mdpath_tools.py  test_mutual_information.py  test_notebook_vis.py  test_structure.py  test_visualization.py  top_pathways.pkl
